Sat Sep 20 23:59:30 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* kcalc.cpp: Added statistical functions

Mon Sep 15 00:34:58 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* added cut and pasted functionality
	* implemented EE 
	* implemented result stack
	* implemented precision and fixed precision 
	* added key bindings
	* tooltips
	* added configuration dialog
	

Sat Aug  2 22:06:59 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* kcalc.h: clean up
	
