@@ -1,13 +1,13 @@
 Begin
 Title:          kcalc
-Version:        0.4
-Entered-date:   200997
+Version:        0.4.5
+Entered-date:   Nov 22 97
 Description:    Scientific Calculator for X11
 Keywords:       Calculator KDE X11 Qt
 Author:         Bernd Johannes Wuebben <wuebben@math.cornell.edu> <wuebben@kde.org>
 Maintained-by:  Bernd Johannes Wuebben <wuebben@math.cornell.edu> <wuebben@kde.org>
 Primary-site:   ftp://fiwi02.wiwi.uni-tuebingen.de/pub/kde/apps/calculator/
-File1:	        kcalc-0.4.tar.gz
+File1:	        kcalc-0.4.5.tar.gz
 Alternate-site: http://math.cornell.edu/~wuebben/
 Original-site:  ftp://math.cornell.edu/pub/wuebben/
 Platform:       Linux and other Unices, needs Qt (v 1.2 or newer available at http://www.troll.no)
