@@ -50,7 +50,6 @@ public:
     CALCAMNT std_kernel();
     CALCAMNT std();
     CALCAMNT sample_std();
-    CALCAMNT getat(int,CALCAMNT array[],int bound);
     int	     count();
     bool     error();
 
